--- a/index_ru.html
+++ b/index_ru.html
@@ -1243,7 +1243,7 @@ defined('_JEXEC') or die;
 &lt;/div&gt;</code></pre>
 
     <p>где [имя_файла] - имя файла видео, без указания расширения.</p>
-    <p>Также необходимо подготовить видео в форматах mp4, ogv, webm и постер к видео в форматах png, jpg и gif. Имя у всех файлов должно быть отдинаковым и соответствовать прописанному ранее [имя_файла]. Все подготовленные файлы нужно разместить в директории media\video\ в корневой директории установленной джумлы</p>
+    <p>Также необходимо подготовить видео в форматах mp4, ogv, webm и постер к видео в форматах png, jpg и gif. Имя у всех файлов должно быть одинаковым и соответствовать прописанному ранее [имя_файла]. Все подготовленные файлы нужно разместить в директории media\video\ в корневой директории установленной джумлы</p>
 
     <div class="img-container"><figure class="img-polaroid"><img src="img/video-2.png" alt=""></figure>
     <p class="muted text-center">Рис 30. Содержимое файла переопределения</p></div>
