--- a/index_ru.html
+++ b/index_ru.html
@@ -1110,7 +1110,7 @@
     <div class="img-container"><figure class="img-polaroid"><img src="img/contact-form-1.png" alt=""></figure>
     <p class="muted text-center">Рис. 23. Модуль TM Ajax Contact Form</p></div>
 
-    <p>TM Ajax Contact Form - модуль контактной формы для Joomla. Он позволяет реализовать на любой странице сайта контактную форму. Отправка данных происходит с помошью технологии Ajax, то есть без перезагрузки страницы. В настройках модуля есть возможность включить защиту от ботов (reCaptcha), а также настроить выводимые поля, их метки (лейблы), задать адресс электронной почты получателя, адреса получателей копии письма, тексты сообщений об ошибках и успешной отправке формы. Полный перечень настроек представлен на картинке ниже.</p>
+    <p>TM Ajax Contact Form - модуль контакт-формы для Joomla. Он позволяет реализовать на любой странице сайта контактную форму. Отправка данных происходит с помощью технологии AJAX, то есть без перезагрузки страницы. В настройках модуля есть возможность включить защиту от ботов (reCaptcha), а также настроить выводимые поля, их метки (лейблы), задать адрес электронной почты получателя, адреса получателей копии письма, тексты сообщений об ошибках и успешной отправке формы. Полный перечень настроек представлен на картинке ниже.</p>
 
     <div class="img-container"><figure class="img-polaroid"><img src="img/contact-form-2.png" alt=""></figure>
     <p class="muted text-center">Рис. 24. Настройки модуля TM Ajax Contact Form</p></div>
@@ -1215,7 +1215,7 @@
     <div class="img-container"><figure class="img-polaroid"><img src="img/video-1.png" alt=""></figure>
     <p class="muted text-center">Рис 28. Фоновое видео на странице сайта</p></div>
 
-    <p>Для реализации фонового видео в шаблоне используется jquery-плагин <a href="http://vodkabears.github.io/vide/" target="_blank">Vide</a>. Проверьте, подключен ли плагин в шаблоне. Для этого перейдите в "Менеджер шаблонов -> Шаблоны", затем перейдите в используемый шаблон (Theme**** Details and Files) и откройте файл "index.php" и проверьте подключение плагина как показано на рис. 29. Также проверьте наличие самого плагина в папке "js". Если плагин отсутствует, скачайте его по сылке выше и разместите в соответствующей папке, а также подключите его в "index.php".</p>
+    <p>Для реализации фонового видео в шаблоне используется jQuery-плагин <a href="http://vodkabears.github.io/vide/" target="_blank" rel="nofollow">Vide</a>. Проверьте, подключен ли плагин в шаблоне. Для этого перейдите в "Менеджер шаблонов -> Шаблоны", затем перейдите в используемый шаблон (Theme**** Details and Files) и откройте файл "index.php",  проверьте подключение плагина, оно должно быть таким же, как показано на рис. 29. Также проверьте наличие самого плагина в папке "js". Если плагин отсутствует, скачайте его по ссылке выше и разместите в соответствующей папке, а также подключите его в "index.php".</p>
 
     <div class="img-container"><figure class="img-polaroid"><img src="img/video-4.png" alt=""></figure>
     <p class="muted text-center">Рис 29. Проверка подключения плагина</p></div>
@@ -1243,7 +1243,7 @@ defined('_JEXEC') or die;
 &lt;/div&gt;</code></pre>
 
     <p>где [имя_файла] - имя файла видео, без указания расширения.</p>
-    <p>Также необходимо подготовить видео в форматах mp4, ogv, webm и постер к видео в форматах png, jpg и gif. Имя у всех файлов должно быть одинаковым и соответствовать прописанному ранее [имя_файла]. Все подготовленные файлы нужно разместить в директории media\video\ в корневой директории установленной джумлы</p>
+    <p>Также необходимо подготовить видео в форматах mp4, ogv, webm и постер к видео в форматах png, jpg и gif. Имя у всех файлов должно быть одинаковым и соответствовать указанному ранее [имя_файла]. Все подготовленные файлы нужно разместить в директории media\video\ в корневой директории установленной Joomla.</p>
 
     <div class="img-container"><figure class="img-polaroid"><img src="img/video-2.png" alt=""></figure>
     <p class="muted text-center">Рис 30. Содержимое файла переопределения</p></div>
@@ -1253,7 +1253,7 @@ defined('_JEXEC') or die;
     <div class="img-container"><figure class="img-polaroid"><img src="img/video-3.png" alt=""></figure>
     <p class="muted text-center">Рис 31. Настройка модуля фонового видео</p></div>
 
-    <p>и во вкладке "Дополнительные параметры" ("Advanced") в выпадающем списке "Альтернативный макет" ("Alternative Layout") выбираем созданный ранее макет [имя файла].</p>
+    <p>Во вкладке "Дополнительные параметры" ("Advanced") в выпадающем списке "Альтернативный макет" ("Alternative Layout") выбираем созданный ранее макет [имя файла].</p>
 
     <p>После проделанных операций на соответствующей странице появится модуль с фоновым видео.</p>
   </div>  
@@ -1261,17 +1261,17 @@ defined('_JEXEC') or die;
   <div id="parallax">
     <h3>Использование параллакс-эффекта (Parallax effect)</h3>
 
-    <p>Для реализации параллакс-эффекта в шаблоне используется jquery-плагин <a href="http://markdalgleish.com/projects/stellar.js/" target="_blank">Stellar</a>.</p>
+    <p>Для реализации параллакс-эффекта в шаблоне используется jQuery-плагин <a href="http://markdalgleish.com/projects/stellar.js/" target="_blank" rel="nofollow">Stellar</a>.</p>
 
     <p>Чтобы использовать параллакс-эффект на странице, необходимо перейти в "Менеджер шаблонов -> Шаблоны", затем перейти в используемый шаблон (Theme**** Details and Files) и открыть файл "index.php". На соответствующем блоке, например "folio-row", добавьте свойство <pre><code>data-stellar-background-ratio="[значение]"</code></pre> как показано на рис. 32:</p>
 
     <div class="img-container"><figure class="img-polaroid"><img src="img/parallax-1.png" alt=""></figure>
     <p class="muted text-center">Рис 32. Использование параллакс-эффекта</p></div>
 
-    <p>где [значение] - коэффициент относительно естественной скорости скроллинга, более детально можно прочитать в <a href="http://markdalgleish.com/projects/stellar.js/docs/" target="_blank">документации</a> к плагину.</p>
+    <p>где [значение] - коэффициент относительно естественной скорости скроллинга, более детально можно прочитать в <a href="http://markdalgleish.com/projects/stellar.js/docs/" target="_blank" rel="nofollow">документации</a> к плагину.</p>
 
     <p>После проделанных операций на соответствующей странице появится параллакс-эффект на соответствующем блоке.</p>
-  </div>  
+  </div>
   <div id="features">
     <h3>Свойства</h3>
 
